# aptsh-svn

tools/: build-aptsh.sh  jeb.pl  releaser.sh
trunk/: .aptsh.c.swp  .genindex.h.swp  .main.c.swp  HOWTO  Makefile  aptsh.conf  configure  configure.ac  howto
trunk/debian/: README.Debian  aptsh-default.ex  aptsh.doc-base.EX  aptsh.substvars  changelog  conffiles.ex  control  copyright  dirs  docs  emacsen-remove.ex  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  rules  watch.ex
trunk/debian/aptsh/DEBIAN/: conffiles  control  md5sums
trunk/src/: Makefile  Makefile.am  apt_cmds.c  apt_cmds.cc  apt_cmds.h  aptsh.1  aptsh.conf  aptsh_howto.1  column.cc  column.h  command.cc  command.h  command_queue.cc  command_queue.h  completions.cc  completions.h  config.h  config_parse.c  config_parse.h  dpkg_complete.cc  dpkg_complete.h  full_completion.cc  full_completion.h  genindex.c  ls.c  main.c  main.cc  main.h  printer.c  read_index.cc  read_index.h  readindex.cc  readindex.h  rls.c  string.c  string.cc  string.h  string_utils.cc  string_utils.h
various/: howto-style.css  howto.t2t
versions/0.0.1/: AUTHOR
versions/0.0.1/debian/: aptsh.substvars  conffiles.ex  copyright  cron.d.ex  emacsen-install.ex  emacsen-startup.ex  files  init.d.ex  manpage.xml.ex  menu.ex  prerm.ex  rules
versions/0.0.1/src/: apt_cmds.c  apt_cmds.h  aptsh.1  aptsh.conf  config_parse.c  genindex.h  main.c  readindex.c  readindex.h  string.c
versions/0.0.6/: HOWTO  INSTALL  Makefile.am  NEWS  README  aptsh.conf
versions/0.0.6/debian/: aptsh.substvars  changelog  dirs  files  rules
versions/0.0.6/src/: Makefile.am  apt_cmds.h  aptsh.1  column.cc  column.h  config.h  config.h.in  dpkg_complete.cc  dpkg_complete.h  ls.c  main.cc  printer.c  read_index.cc  rls.c
